big updates. desktop placeholders ready

--- a/consult.html
+++ b/consult.html
@@ -54,7 +54,7 @@
         <section class="consult-container" id="consult">
             <article class="consult-header">
                 <h3>We Get You Over The Finish Line!</h3>
-                <p>Trying to finish your film? Insert good copy here lol Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt doloribus similique eligendi, dignissimos possimus numquam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et, pariatur!</p>
+                <p>Trying to finish your film? Let us lend a hand! As a film producer and consultant with years of experience in the industry, I understand the challenges and complexities that come with completing and promoting your independent film. Our goal is to help you get your film over the finish line and into the hearts and minds of audiences everywhere.</p>
             </article>
         </section>
 
@@ -75,55 +75,79 @@
                 <hr>
                 <span class="title highlight">Marvel Studios Head of VisDev</span>
                 <span class="name">Ryan Meinerding</span>
+                <img src="/images/realperson1.webp">
             </section>
 
             <section class="testimony quote-two">
                 <i class="fa-solid fa-quote-left" style="color: crimson"></i>                
                 <aside>
-                    Allison has a wonderful personality and is very easy to work with. If you have the opportunity to collaborate creatively with her, don't hesitate - she will be an asset to your team.
+                    Working with Visionrey has been a game-changing experience for our film project. Their expert guidance and innovative strategies not only helped us navigate the complexities of production, but also propelled our film to unprecedented levels of success. We can't recommend Visionrey highly enough for any filmmaker seeking a partner that truly understands and elevates their vision.
                 </aside>
                 <hr>
-                <span class="title highlight">Marvel Studios Head of VisDev</span>
-                <span class="name">Ryan Meinerding</span>
+                <span class="title highlight">State of the art AI</span>
+                <span class="name">ChatGPT</span>
+                <img src="/images/realperson2.webp">
+
             </section>
 
-            <section class="testimony quote-three">
+          <section class="testimony quote-three">
                 <i class="fa-solid fa-quote-left" style="color: crimson"></i>                
                 <aside>
-                    Allison has a wonderful personality and is very easy to work with. If you have the opportunity to collaborate creatively with her, don't hesitate - she will be an asset to your team.
+                    Collaborating with Visionrey was a pivotal decision for our indie film, and we couldn't be more grateful. Their seasoned team of professionals provided invaluable insights and support throughout the entire process, ultimately transforming our creative vision into a compelling and marketable masterpiece. Don't hesitate to choose Visionrey for your film production and consulting needs.
                 </aside>
                 <hr>
-                <span class="title highlight">Marvel Studios Head of VisDev</span>
-                <span class="name">Ryan Meinerding</span>
+                <span class="title highlight">State of the art AI</span>
+                <span class="name">ChatGPT</span>
+                <img src="/images/realperson1.webp">
+
             </section>
 
             <section class="testimony quote-four">
                 <i class="fa-solid fa-quote-left" style="color: crimson"></i>                
                 <aside>
-                    Allison has a wonderful personality and is very easy to work with. If you have the opportunity to collaborate creatively with her, don't hesitate - she will be an asset to your team.
+                    Our experience with Visionrey exceeded all expectations. Their team of dedicated experts guided us through every step of our filmmaking journey, offering invaluable advice and strategic direction. With Visionrey's help, our film not only reached its full potential but also garnered significant attention and acclaim. We wholeheartedly recommend Visionrey for any filmmaker looking to take their project to new heights.
                 </aside>
                 <hr>
-                <span class="title highlight">Marvel Studios Head of VisDev</span>
-                <span class="name">Ryan Meinerding</span>
-            </section>
+                <span class="title highlight">State of the art AI</span>
+                <span class="name">ChatGPT</span>
+                <img src="/images/realperson3.webp">
+
+            </section> 
         </section>
 
-         <span class="consult-midcopy">
-            Here's some more copy I guess? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est nisi explicabo veniam ipsum modi tempore pariatur ullam molestiae omnis officiis accusamus accusantium, adipisci consectetur. Laboriosam vel quos modi iure voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus ea eos unde incidunt! Veritatis exercitationem
-        </span><hr>
-        <span class="consult-midcopy">
-            repudiandae, repellendus tempore ad quam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dignissimos? Odit consequuntur eos nisi, et temporibus illo aperiam aliquam quaerat non nesciunt nostrum minus dicta sapiente commodi blanditiis sunt hic.
-        </span>
+         <p class="consult-midcopy">
+            Are you grappling with the intricacies of completing and promoting your independent film? Look no further. Our comprehensive range of services includes indie film marketing, post-production brainstorming, distribution, and film festival marketing and strategy—all designed to propel your film across the finish line and into the spotlight.
+        </p>
+        <p class="consult-midcopy">
+            We provide bespoke marketing campaigns, expert post-production collaboration, and strategic guidance through the maze of film distribution and festival circuits. Our comprehensive approach helps your film resonate with audiences, stand out in a competitive landscape, and reach its full potential. 
+        </p>
+        <p class="consult-midcopy">
+            Don't let your film's potential fade into obscurity. Team up with [Your Film Consultant] and let us help you sprint across that finish line. Reach out to us today and embark on your journey to cinematic triumph!
+        </p>
 
         <article class="prices">
-            <section class="price-example consult-one">
-
-            </section>
+            <h2>CONSULTING</h2>
+            <span class="price-time">$250 / Four 60 minute meetings</span>
+            <ul>
+                <li>
+                    Indie Film Marketing
+                </li>
+                <li>
+                    Sales & Distribution Guidance
+                </li>
+                <li>
+                    Post Production Workflow
+                </li>
+                <li>
+                    Film Festival Strategy
+                </li>
+            </ul>
+            <a href="#consult-form">Book Now!</a>
         </article>
 
 
 
-        <article class="consult-form-container">
+        <article class="consult-form-container" id="consult-form">
         <section class="contact-form consult-form">
             <form action="/" method="POST"> 
                 <label for="fname">Full Name</label><br>
@@ -139,6 +163,7 @@
                         <option value="instagram">Instagram</option>
                         <option value="ad">Ad</option>
                         <option value="referral">Referral</option>
+                        <option value="none">N/A</option>
                     </select><br>
 
                     <label for="what">What can we help you with?</label><br>
@@ -150,6 +175,7 @@
                         <option value="realestate">Real Estate photography</option>
                         <option value="wedding">Wedding photography</option>
                         <option value="branding">Branding</option>
+                        <option value="other">Other</option>
                     </select><br>
 
                     <label for="when">Date (if applicable)</label><br>
