--- a/video.html
+++ b/video.html
@@ -60,8 +60,8 @@
 
             <section class="hero-vid">
                 <figure>
-                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> 'M' Production Interviews</h3>
-                <span>1:20</span>
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> FilAm</h3>
+                <span>Short Film -- 6:40</span>
                 </figure>
             </section>
 
@@ -73,8 +73,8 @@
             </section>
             <section class="vid-two">
                 <figure>
-                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> FilAm</h3>
-                <span>Short Film -- 6:40</span>
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> Blood and Sand<br> a STAR WARS story</h3>
+                <span>Short Film</span>
                 </figure>
             </section>
             <section class="vid-three">
@@ -85,25 +85,73 @@
             </section>
             <section class="vid-four">
                 <figure>
-                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> Ad Campaign</h3>
-                <span>1:20</span>
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> The Withering</h3>
+                <span>Short Filmn -- 6:66</span>
                 </figure>
             </section>
 
+        </section>
 
+        <section id="video" class="video-container commercial-container">
+            <article class="video-text">
+                <h1>Commercial</h1>
+                <p>You think you can do commercial work by yourself? Well like...you can't. Hire me.</p>
+                <hr>
+            </article>
+            
+            <section class="hero-vid">
+                <figure>
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> MILF Manor House Tour</h3>
+                <span>TLC Reality Show</span>
+                </figure>
+            </section>
+        </section>
+
+        <section id="video" class="video-container reels-container">
+            <article class="video-text">
+                <h1>Actor Reels</h1>
+                <hr>
+            </article>
+            <section class="hero-vid">
+                <figure>
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> Apocalypse</h3>
+                <span>Reel Scene -- Allison and Rory</span>
+                </figure>
+            </section>
+
+            <section class="vid-one">
+                <figure>
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> More Reels</h3>
+                <span>Reel Scene</span>
+                </figure>
+            </section>
+            <section class="vid-two">
+                <figure>
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> The Reeliest Reel</h3>
+                <span>Reel Scene</span>
+                </figure>
+            </section>
         </section>
 
 
-
-
-
-
-    <a href="contact.html#contact-section">
-    <input class="button contact-us-button video-contact-button" type="submit" value="Contact Us!">
-    </a>
+        <section id="video" class="video-container bts-container">
+            <article class="video-text">
+                <h1>Interviews and <br>Behind the Scenes</h1>
+                <hr>
+            </article>
+            <section class="hero-vid">
+                <figure>
+                    <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> 'M' Interviews</h3>
+                    <span>Film BTS</span>
+                </figure>
+            </section>
+        </section>
 
         </section>
 
+        <a href="contact.html#contact-section">
+        <input class="button contact-us-button video-contact-button" type="submit" value="Contact Us!">
+        </a>
 
     </main>
 
