--- a/photo.html
+++ b/photo.html
@@ -50,7 +50,7 @@
           </section>
 
 
-        <section id="photo-main">
+<!--         <section id="photo-main">
             <article class="headshots">
                 <h3>HEADSHOTS</h3>
                 <span>A short description/sales copy. Something more specific than this. Could also, honestly, have nothing at all other than the heading.</span>
@@ -76,7 +76,6 @@
             <article class="real-estate">
 
             </article>
--->
 
 <input type="radio" name="Photos" id="check1" checked>
 <input type="radio" name="Photos" id="check2">
@@ -145,16 +144,195 @@
 
         </section>
 
-</article>
+</article> -->
+
+    <section class="photos-main">
+        <h2>Headshots</h2>
+        <hr>
+        <section class="headshots">
+            <div class="container">
+                <div class="box">
+                  <img class="headshot" src="https://placekitten.com/800/802">
+                  <span>Name</span>
+                </div>
+                <div class="box">
+                  <img class="headshot" src="https://placekitten.com/800/800">
+                  <span>Name</span>
+                </div>
+                <div class="box">
+                  <img class="headshot" src="https://placekitten.com/802/800">
+                  <span>Name</span>
+                </div>
+                <div class="box">
+                  <img class="headshot" src="https://placekitten.com/810/806">
+                  <span>Name</span>
+                </div>
+                <div class="box">
+                    <img class="headshot" src="https://placekitten.com/830/812">
+                    <span>Name</span>
+                </div>
+                <div class="box">
+                    <img class="headshot" src="https://placekitten.com/800/820">
+                    <span>Name</span>
+                </div>
+                <div class="box">
+                    <img class="headshot" src="https://placekitten.com/802/850">
+                    <span>Name</span>
+                </div>
+                <div class="box">
+                    <img class="headshot" src="https://placekitten.com/810/866">
+                    <span>Name</span>
+                </div>
+              </div>
+              <div id="lightbox" class="lightbox hidden">
+                <img id="lightbox-img" src="" alt="">
+            </div>
+        </section>
+
+        <section class="lifestyle-photos">
+            <h2>Lifestyle & Themes</h2>
+            <hr>
+                <div class="container">
+                    <div class="box">
+                      <img class="headshot" src="https://placekitten.com/800/802">
+                      <span>Name</span>
+                    </div>
+                    <div class="box">
+                      <img class="headshot" src="https://placekitten.com/800/800">
+                      <span>Name</span>
+                    </div>
+                    <div class="box">
+                      <img class="headshot" src="https://placekitten.com/802/800">
+                      <span>Name</span>
+                    </div>
+                    <div class="box">
+                      <img class="headshot" src="https://placekitten.com/810/806">
+                      <span>Name</span>
+                    </div>
+                    <div class="box">
+                        <img class="headshot" src="https://placekitten.com/830/812">
+                        <span>Name</span>
+                    </div>
+                    <div class="box">
+                        <img class="headshot" src="https://placekitten.com/800/820">
+                        <span>Name</span>
+                    </div>
+                    <div class="box">
+                        <img class="headshot" src="https://placekitten.com/802/850">
+                        <span>Name</span>
+                    </div>
+                    <div class="box">
+                        <img class="headshot" src="https://placekitten.com/810/866">
+                        <span>Name</span>
+                    </div>
+                  </div>
+                  <div id="lightbox" class="lightbox hidden">
+					<img id="lightbox-img" src="" alt="">
+				</div>
+        </section>
+
+        <section class="bts-photos">
+				<h2>Behind The Scenes</h2>
+                <hr>
+				<div class="masonry-gallery">
+					<div class="masonry-wrapper">
+						<img class="headshot" src="https://placekitten.com/610/866" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						<img class="headshot" src="https://placekitten.com/810/696" alt="Headshot 1" loading="lazy">						
+					</div>
+					<div class="masonry-wrapper">
+						<img class="headshot" src="https://placekitten.com/610/636" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						<img class="headshot" src="https://placekitten.com/810/866" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						<img class="headshot" src="https://placekitten.com/510/866" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						<img class="headshot" src="https://placekitten.com/810/566" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						  <img class="headshot" src="https://placekitten.com/510/566" alt="Headshot 1" loading="lazy">
+						</div>
+					<div class="masonry-wrapper">
+						  <img class="headshot" src="https://placekitten.com/810/1066" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						  <img class="headshot" src="https://placekitten.com/550/866" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						  <img class="headshot" src="https://placekitten.com/810/556" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						<img class="headshot" src="https://placekitten.com/700/566" alt="Headshot 1" loading="lazy">
+					</div>
+					<div class="masonry-wrapper">
+						<img class="headshot" src="https://placekitten.com/910/1166" alt="Headshot 1" loading="lazy">
+					</div>
+				  </div>
+				  <div id="lightbox" class="lightbox hidden">
+					<img id="lightbox-img" src="" alt="">
+				</div>
+		</section>
+
+
+        <section class="events-photos">
+            <h2>Events</h2>
+            <hr>
+            <div class="gallery">
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/910/1066" alt="Headshot 1" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/910/1166" alt="Headshot 2" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/910/1266" alt="Headshot 3" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/910/1366" alt="Headshot 4" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/1110/1166" alt="Headshot 5" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/810/1166" alt="Headshot 6" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/1010/1066" alt="Headshot 7" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/1010/1166" alt="Headshot 8" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/1010/1166" alt="Headshot 9" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/1010/1466" alt="Headshot 10" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/1410/1866" alt="Headshot 11" loading="lazy">
+                </div>
+                <div class="headshot-wrapper">
+                    <img class="headshot" src="https://placekitten.com/1110/1166" alt="Headshot 12" loading="lazy">
+                </div>
+            </div>
+            <div id="lightbox" class="lightbox hidden">
+                <img id="lightbox-img" src="" alt="">
+            </div>
+            
+        </section>
+
+    </section>
+
 
 
     <a href="contact.html#contact-section">
     <input class="button contact-us-button" type="submit" value="Contact Us!">
     </a>
-
         </section>
-
-
     </main>
 
     <script src="https://kit.fontawesome.com/21695ac8bb.js" crossorigin="anonymous"></script>
