mobile site updated

--- a/index.html
+++ b/index.html
@@ -12,27 +12,37 @@
 
 		<title>Visionrey</title>
 
-		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
         <header>
-            <h1>Visionrey</h1>
+            
             <a href="index.html">
             <figure class = "logo">
                 <img src="images/logo.webp" alt="Visionrey Logo"> 
             </figure>
             </a>
-        <nav>
-            <ul>
-            <li><a href="#">ACTORS</a></li>
-            <li><a href="#">PRODUCTION</a></li>
-            <li><a href="#">PHOTOS</a></li>
-            <li><a href="#">BRANDING</a></li>
-            <li><a href="#">WEDDINGS</a></li>
-            </ul>
-        </nav>
+            <i class="fa-solid fa-bars" id="hamburger" style="color: #ffffff;"></i>
+            <nav class="mobile-nav">
+                <ul>
+                    <li><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></li>
+                    <li><a href="index.html" class="home">HOME</a></li>
+                    <li><a href="photo.html#gallery" class="actors">PHOTOGRAPHY</a></li>
+                    <li><a href="video.html#video" class="production">VIDEOGRAPHY</a></li>
+                    <li><a href="consult.html#consult" class="photos">CONSULTATION</a></li>
+                    <li><a href="wedding.html#wedding" class="weddings">WEDDINGS</a></li>
+                    <li><a href="contact.html" class="contact">CONTACT US</a></li>
+                </ul>
+                <nav class="mobile-socialnav-icons">
+                    <ul>
+                      <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" style="color: crimson" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" style="color: crimson" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.pinterest.com/"><i class="fa fa-linkedin" style="color: crimson" aria-hidden="true"></i></a></li>
+                      <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" style="color: crimson" aria-hidden="true"></i></a></li>
+                    </ul>
+                </nav>
+            </nav>
         </header>
 
         <main>
@@ -80,8 +90,8 @@
                 <h2>WHO IS VISIONREY?</h2>
                 <p>
                     VisionRey is brought to you by industry professionals who have worked on the following tv shows. 
-                    We at VisionRey believe in helping people get their start in the entertainment industry.</p><br>
-                    <p>VisionRey is a female owned production company that specializes in films and helping others ignite their careers in entertainment. It was founded by Allison Marie Reyes in December of 2021.</p><br>
+                    We at VisionRey believe in helping people get their start in the entertainment industry.</p>
+                    <p>VisionRey is a female owned production company that specializes in films and helping others ignite their careers in entertainment.</p>
                 <p>
                     Located in Burbank, California. We are here to help!
                 </p>
@@ -130,7 +140,7 @@
             <section class="social-footer-left">
                 <figure></figure>
                 <nav class="social-footer-icons">
-                    <ul class="menu simple">
+                    <ul>
                       <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                       <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                       <li><a href="https://www.pinterest.com/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
