--- a/learn.html
+++ b/learn.html
@@ -20,22 +20,34 @@
 
 <body>
     <header>
-            <h1>Visionrey</h1>
-            <a href="index.html">
-            <figure class = "logo">
-                <img src="images/logo.webp" alt="Visionrey Logo"> 
-            </figure>
-             </a>
-        <nav>
+            
+        <a href="index.html">
+        <figure class = "logo">
+            <img src="images/logo.webp" alt="Visionrey Logo"> 
+        </figure>
+        </a>
+        <i class="fa-solid fa-bars" id="hamburger" style="color: #ffffff;"></i>
+        <nav class="mobile-nav">
             <ul>
-            <li><a href="#">ACTORS</a></li>
-            <li><a href="#">PRODUCTION</a></li>
-            <li><a href="#">PHOTOS</a></li>
-            <li><a href="#">BRANDING</a></li>
-            <li><a href="#">WEDDINGS</a></li>
+                <li><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></li>
+                <li><a href="index.html" class="home">HOME</a></li>
+                <li><a href="photo.html#gallery" class="actors">PHOTOGRAPHY</a></li>
+                <li><a href="video.html#video" class="production">VIDEOGRAPHY</a></li>
+                <li><a href="consult.html#consult" class="photos">CONSULTATION</a></li>
+                <li><a href="wedding.html#wedding" class="weddings">WEDDINGS</a></li>
+                <li><a href="contact.html" class="contact">CONTACT US</a></li>
             </ul>
+            <nav class="mobile-socialnav-icons">
+                <ul>
+                  <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.pinterest.com/"><i class="fa fa-linkedin" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" style="color: crimson" aria-hidden="true"></i></a></li>
+                </ul>
+            </nav>
         </nav>
     </header>
+
 
     <main>
         <section class="hero">
@@ -52,7 +64,7 @@
         <h1 class="learn-header">Meet Allison</h1>
 
         <section id="learn" class="learn-container">
-            <p>VISIONREY Entertainment was founded by Allison Reyes in hopes of helping others ignite their careers in entertainment while also making things more affordable for creatives everywhere. Growing up as a multi-hyphenate in entertainment, Allison realized that the financial struggle is REAL and she hopes to be able to lend a helping hand -- or camera -- to those in need. </p>
+            <p><b>VISIONREY</b> Entertainment was founded by Allison Reyes in hopes of helping others ignite their careers in entertainment while also making things more affordable for creatives everywhere. Growing up as a multi-hyphenate in entertainment, Allison realized that the financial struggle is REAL and she hopes to be able to lend a helping hand -- or camera -- to those in need. </p>
             <p>Allison is a working actor and producer who has worked on some of the biggest tv shows and films in entertainment, including Netflix's Top Ten series "Hype House", Facebook Watch's "Face to Face With Becky G", and most recently Zack Snyder's feature film "Rebel Moon"!</p>
             <p>With a background in dance (ever heard of a little place called Disneyland? Allison used to dance there!), Allison understands the importance of highlighting each individual skill to create perfect actor reels. It is her hope that through VISIONREY Entertainment, we can turn dreams from visions...into REYality. </p>
         </section>
