--- a/photo.html
+++ b/photo.html
@@ -20,22 +20,34 @@
 
 <body>
     <header>
-            <h1>Visionrey</h1>
-            <a href="index.html">
-            <figure class = "logo">
-                <img src="images/logo.webp" alt="Visionrey Logo"> 
-            </figure>
-             </a>
-        <nav>
+            
+        <a href="index.html">
+        <figure class = "logo">
+            <img src="images/logo.webp" alt="Visionrey Logo"> 
+        </figure>
+        </a>
+        <i class="fa-solid fa-bars" id="hamburger" style="color: #ffffff;"></i>
+        <nav class="mobile-nav">
             <ul>
-            <li><a href="#">ACTORS</a></li>
-            <li><a href="#">PRODUCTION</a></li>
-            <li><a href="#">PHOTOS</a></li>
-            <li><a href="#">BRANDING</a></li>
-            <li><a href="#">WEDDINGS</a></li>
+                <li><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></li>
+                <li><a href="index.html" class="home">HOME</a></li>
+                <li><a href="photo.html#gallery" class="actors">PHOTOGRAPHY</a></li>
+                <li><a href="video.html#video" class="production">VIDEOGRAPHY</a></li>
+                <li><a href="consult.html#consult" class="photos">CONSULTATION</a></li>
+                <li><a href="wedding.html#wedding" class="weddings">WEDDINGS</a></li>
+                <li><a href="contact.html" class="contact">CONTACT US</a></li>
             </ul>
+            <nav class="mobile-socialnav-icons">
+                <ul>
+                  <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.pinterest.com/"><i class="fa fa-linkedin" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" style="color: crimson" aria-hidden="true"></i></a></li>
+                </ul>
+            </nav>
         </nav>
     </header>
+
 
     <main>
         <section class="hero">
@@ -48,103 +60,6 @@
               </ul>
             </nav>
           </section>
-
-
-<!--         <section id="photo-main">
-            <article class="headshots">
-                <h3>HEADSHOTS</h3>
-                <span>A short description/sales copy. Something more specific than this. Could also, honestly, have nothing at all other than the heading.</span>
-
-                <div class="carousel">
-                    <div class="carousel-inner">
-                      <img src="https://placekitten.com/350/250" alt="Image 1">
-                      <img src="https://placekitten.com/350/250" alt="Image 2">
-                      <img src="https://placekitten.com/350/250" alt="Image 3">
-                    </div>
-                    <button class="carousel-prev">Prev</button>
-                    <button class="carousel-next">Next</button>
-                  </div>
-                   
-
-
-            </article>
-
-            <article class="events">
-
-            </article>
-
-            <article class="real-estate">
-
-            </article>
-
-<input type="radio" name="Photos" id="check1" checked>
-<input type="radio" name="Photos" id="check2">
-<input type="radio" name="Photos" id="check3"> 
-<input type="radio" name="Photos" id="check4">
-
-<article id="gallery" class="gallery-container">
-    <h1>GALLERY</h1>
-        <section class="gallery-top-content">
-            <label for="check1">All Photos</label>
-            <label for="check2">Headshots</label>
-            <label for="check3">Events</label>
-            <label for="check4">Real Estate</label>
-        </section>
-
-        <section class="photo-gallery">
-            <section class="pic headshot">
-                <img src="https://placekitten.com/350/250"> 
-            </section>
-            <section class="pic event">
-                <img src="https://placekitten.com/351/250"> 
-            </section>
-            <section class="pic estate">
-                <img src="https://placekitten.com/350/251"> 
-            </section>
-
-            <section class="pic headshot">
-                <img src="https://placekitten.com/250/350"> 
-            </section>
-            <section class="pic event">
-                <img src="https://placekitten.com/351/251"> 
-            </section>
-            <section class="pic estate">
-                <img src="https://placekitten.com/349/251"> 
-            </section>
-
-            <section class="pic headshot">
-                <img src="https://placekitten.com/255/350"> 
-            </section>
-            <section class="pic event">
-                <img src="https://placekitten.com/355/251"> 
-            </section>
-            <section class="pic estate">
-                <img src="https://placekitten.com/345/251"> 
-            </section>
-
-            <section class="pic headshot">
-                <img src="https://placekitten.com/257/350"> 
-            </section>
-            <section class="pic event">
-                <img src="https://placekitten.com/357/251"> 
-            </section>
-            <section class="pic estate">
-                <img src="https://placekitten.com/347/251"> 
-            </section>
-
-            <section class="pic headshot">
-                <img src="https://placekitten.com/250/353"> 
-            </section>
-            <section class="pic event">
-                <img src="https://placekitten.com/351/253"> 
-            </section>
-            <section class="pic estate">
-                <img src="https://placekitten.com/349/253"> 
-            </section>
-
-        </section>
-
-</article> -->
 
     <section class="photos-main">
         <h2>Headshots</h2>
