--- a/consult.html
+++ b/consult.html
@@ -20,22 +20,34 @@
 
 <body>
     <header>
-            <h1>Visionrey</h1>
-            <a href="index.html">
-            <figure class = "logo">
-                <img src="images/logo.webp" alt="Visionrey Logo"> 
-            </figure>
-             </a>
-        <nav>
+            
+        <a href="index.html">
+        <figure class = "logo">
+            <img src="images/logo.webp" alt="Visionrey Logo"> 
+        </figure>
+        </a>
+        <i class="fa-solid fa-bars" id="hamburger" style="color: #ffffff;"></i>
+        <nav class="mobile-nav">
             <ul>
-            <li><a href="#">ACTORS</a></li>
-            <li><a href="#">PRODUCTION</a></li>
-            <li><a href="#">PHOTOS</a></li>
-            <li><a href="#">BRANDING</a></li>
-            <li><a href="#">WEDDINGS</a></li>
+                <li><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></li>
+                <li><a href="index.html" class="home">HOME</a></li>
+                <li><a href="photo.html#gallery" class="actors">PHOTOGRAPHY</a></li>
+                <li><a href="video.html#video" class="production">VIDEOGRAPHY</a></li>
+                <li><a href="consult.html#consult" class="photos">CONSULTATION</a></li>
+                <li><a href="wedding.html#wedding" class="weddings">WEDDINGS</a></li>
+                <li><a href="contact.html" class="contact">CONTACT US</a></li>
             </ul>
+            <nav class="mobile-socialnav-icons">
+                <ul>
+                  <li><a href="https://www.facebook.com/"><i class="fa fa-facebook" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://www.pinterest.com/"><i class="fa fa-linkedin" style="color: crimson" aria-hidden="true"></i></a></li>
+                  <li><a href="https://twitter.com/?lang=en"><i class="fa fa-twitter" style="color: crimson" aria-hidden="true"></i></a></li>
+                </ul>
+            </nav>
         </nav>
     </header>
+
 
     <main>
         
