broken header hover JS fixed

--- a/consult.html
+++ b/consult.html
@@ -30,12 +30,12 @@
         <nav class="mobile-nav">
             <ul>
                 <li><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></li>
-                <li><a href="index.html" class="home">HOME</a></li>
-                <li><a href="photo.html#gallery" class="actors">PHOTOGRAPHY</a></li>
-                <li><a href="video.html#video" class="production">VIDEOGRAPHY</a></li>
-                <li><a href="consult.html#consult" class="photos">CONSULTATION</a></li>
-                <li><a href="wedding.html#wedding" class="weddings">WEDDINGS</a></li>
-                <li><a href="contact.html" class="contact">CONTACT US</a></li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="photo.html#gallery">PHOTOGRAPHY</a></li>
+                <li><a href="video.html#video">VIDEOGRAPHY</a></li>
+                <li><a href="consult.html#consult">CONSULTATION</a></li>
+                <li><a href="wedding.html#wedding">WEDDINGS</a></li>
+                <li><a href="contact.html">CONTACT US</a></li>
             </ul>
             <nav class="mobile-socialnav-icons">
                 <ul>
