I think it's done actually?

--- a/learn.html
+++ b/learn.html
@@ -104,9 +104,9 @@
     <nav class="footnav">
         <ul>
             <a href="index.html"><li>Home</li></a>
-            <a href="video.html#video"><li>Production</li>
-            <a href="consult.html#learn"><li class="current-page">About Us</li>
-            <a href="wedding.html#contact"><li>Contact</li>
+            <a href="video.html"><li>Production</li>
+            <a href="learn.html"><li class="current-page">About Us</li>
+            <a href="contact.html"><li>Contact</li>
             <a href="ignite.html"><li>Ignite Program</li>
         </ul>
     </nav>
