--- a/contact.html
+++ b/contact.html
@@ -151,9 +151,9 @@
     <nav class="footnav">
         <ul>
             <a href="index.html"><li >Home</li></a>
-            <a href="video.html#video"><li>Production</li>
-            <a href="consult.html#learn"><li>About Us</li>
-            <a href="wedding.html#contact" class="current-page"><li>Contact</li>
+            <a href="video.html"><li>Production</li>
+            <a href="learn.html"><li>About Us</li>
+            <a href="contact.html" class="current-page"><li>Contact</li>
             <a href="ignite.html"><li>Ignite Program</li>
         </ul>
     </nav>
