spacing and sizing fixes

--- a/ignite.html
+++ b/ignite.html
@@ -63,7 +63,7 @@
                 </p>
         
                 <p>
-                    VisionRey’s mission is to turn vision into reality through collaboration in an all inclusive environment. Igniting careers from all walks of life, VisionRey focuses on telling stories that are unique and entertaining all while remaining grounded. With a focus of uplifting creatives from underrepresented communities, VisionRey relishes in giving opportunities to those with all experience levels. From people with high level industry experience to those who are just starting their entertainment journey, VisionRey upholds a strong sense of community that allows every team member to flourish in their skill set while feeling included and heard. As a collective, VisionRey is and always will be a production company that champions new talents while making dreams come true.             
+                    VisionRey’s mission is to turn vision into reality through collaboration in an all inclusive environment. Igniting careers from all walks of life, VisionRey focuses on telling stories that are unique and entertaining all while remaining grounded.<br><br> With a focus of uplifting creatives from underrepresented communities, VisionRey relishes in giving opportunities to those with all experience levels. From people with high level industry experience to those who are just starting their entertainment journey, VisionRey upholds a strong sense of community that allows every team member to flourish in their skill set while feeling included and heard. <br><br>As a collective, VisionRey is and always will be a production company that champions new talents while making dreams come true.             
                 </p>
             </section>
 
