Large scale changes. Added showcase

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
         <nav class="mobile-nav">
             <ul>
                 <li><a href="index.html"><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></a></li>
+                <li><a href="showcase.html">2024 SHOWCASE</a></li>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="video.html">PRODUCTION</a></li>
                 <li><a href="learn.html">ABOUT US</a></li>
@@ -61,9 +62,9 @@
                     At VISIONREY we offer a range of creative services to help you capture your vision. 
                 </p>
                 <ul>
-                <li>Stunning reel footage</li> 
-                <li>Professional headshots</li> 
-                <li>Beautiful wedding photography</li> 
+                <li>Stunning reel footage.</li> 
+                <li>Professional headshots.</li> 
+                <li>Beautiful wedding photography.</li> 
                 <li>Expert branding and social media services.</li>
                 </ul>
                 <p>
@@ -84,10 +85,10 @@
 
                         <label for="where">How'd you hear about us?</label><br>
                         <select id="where" name="where" placeholder="  Choose an option"> 
+                            <option value="instagram">Instagram</option>
                             <option value="facebook">Facebook</option>
                             <option value="linkedin">LinkedIn</option>
                             <option value="twitter">Twitter</option>
-                            <option value="instagram">Instagram</option>
                             <option value="ad">Ad</option>
                             <option value="referral">Referral</option>
                         </select><br>
@@ -150,11 +151,12 @@
 
     <nav class="footnav">
         <ul>
-            <a href="index.html"><li >Home</li></a>
-            <a href="video.html"><li>Production</li>
-            <a href="learn.html"><li>About Us</li>
-            <a href="contact.html" class="current-page"><li>Contact</li>
-            <a href="ignite.html"><li>Ignite Program</li>
+            <a href="showcase.html"><li>2024 SHOWCASE</li></a>
+            <a href="index.html"><li>Home</li></a>
+            <a href="video.html"><li>Production</li></a>
+            <a href="learn.html"><li>About Us</li></a>
+            <a href="contact.html"><li class="current-page">Contact</li></a>
+            <a href="ignite.html"><li>Ignite Program</li></a>
         </ul>
     </nav>
 
