--- a/ignite.html
+++ b/ignite.html
@@ -30,6 +30,7 @@
         <nav class="mobile-nav">
             <ul>
                 <li><a href="index.html"><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></a></li>
+                <li><a href="showcase.html">2024 SHOWCASE</a></li>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="video.html">PRODUCTION</a></li>
                 <li><a href="learn.html">ABOUT US</a></li>
@@ -144,6 +145,7 @@
 
     <nav class="footnav">
         <ul>
+            <a href="showcase.html"><li>2024 SHOWCASE</li></a>
             <a href="index.html"><li >Home</li></a>
             <a href="video.html"><li>Production</li>
             <a href="learn.html"><li>About Us</li>
