--- a/video.html
+++ b/video.html
@@ -30,6 +30,7 @@
         <nav class="mobile-nav">
             <ul>
                 <li><a href="index.html"><img class="mobile-nav-logo" src="images/logo.webp" alt="Visionrey Logo"></a></li>
+                <li><a href="showcase.html">2024 SHOWCASE</a></li>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="video.html">PRODUCTION</a></li>
                 <li><a href="learn.html">ABOUT US</a></li>
@@ -83,24 +84,29 @@
                 <img src="/images/norm.webp" onclick="loadVideo(this.parentNode)"/>
             </section>
 
-            <section class="vid-four" data-video-id="7O51uvEV7o8">
-                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> The Withering</h3>
-                <img src="/images/withering.webp" onclick="loadVideo(this.parentNode)"/>
+            <section class="vid-four" data-video-id="ekOhQgg1nMI">
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> Bite Me</h3>
+                <img src="/images/bite me poster.webp" onclick="loadVideo(this.parentNode)"/>
             </section>
 
-            <section class="main-vid vid-zero videocontainer" data-video-id="UyN7q0qaYmA">
+            <section class="vid-one" data-video-id="UyN7q0qaYmA">
                 <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> Murder is on the Table</h3>
                 <img src="/images/murderisonthetable.webp" onclick="loadVideo(this.parentNode)"/>
             </section>
 
-            <section class="vid-one" data-video-id="FlkO2cg1DTg">
+            <section class="vid-two" data-video-id="FlkO2cg1DTg">
                 <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> This Just In</h3>
                 <img src="/images/thisjustin.webp" onclick="loadVideo(this.parentNode)"/>
             </section>
 
-            <section class="vid-two" data-video-id="N7-A2FKWQrI">
+            <section class="vid-three" data-video-id="N7-A2FKWQrI">
                 <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> Butt Stuff</h3>
                 <img src="/images/buttstuff.webp" onclick="loadVideo(this.parentNode)"/>
+            </section>
+
+            <section class="vid-four" data-video-id="DAtQzobOBKs">
+                <h3><i class="fa-regular fa-circle-play" style="color: #ffffff;"></i> You're a Winner</h3>
+                <img src="/images/You're a Winner film poster.webp" onclick="loadVideo(this.parentNode)"/>
             </section>
 
         </section>
@@ -144,6 +150,7 @@
 
     <nav class="footnav">
         <ul>
+            <a href="showcase.html"><li>2024 SHOWCASE</li></a>
             <a href="index.html"><li>Home</li></a>
             <a href="video.html"><li class="current-page">Production</li>
             <a href="learn.html"><li>About Us</li>
