weird display issue bugfix

--- a/showcase.html
+++ b/showcase.html
@@ -128,7 +128,7 @@
         </section>
         
         
-        <section class="contact-text showcase-text sponsor-text">
+        <section class="contact-text showcase-text sponsor-txt">
             <h3>THANK YOU TO OUR SPONSORS!</h3>
 
             <p>Without your kindness and grace, very little of this would be possible. <br> Together, we can continue uplifting creatives everywhere and turning visions into reality! </p>
@@ -140,7 +140,7 @@
         </section>
 
 
-        <a class="sponsor-button" href="https://www.eventbrite.com/e/visionrey-private-showcase-tickets-863446430517?aff=oddtdtcreator" target="_blank">
+        <a class="sponsor-button" href="/sponsor-contact.html">
             <input class="button tickets-button" type="submit" value="Become A Sponsor Today!">
         </a>
 
