--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <ul>
                       <li><a href="https://facebook.com/VisionReyEnt" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                       <li><a href="https://instagram.com/VisionReyEnt" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                      <li><a href="https://us.linkedin.com/in/VisionRey" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                      <li><a href="https://www.linkedin.com/company/visionreyent/about/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                       <li><a href="https://twitter.com/VisionReyEnt" target="_blank"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a></li>
                     </ul>
                 </nav>
