--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             
             <h2>Sponsered by:</h2>
             <article class="sponsor-images">
-                <img src="/images/FD_companyLogo_REVERSED.png">
-                <img src="/images/Coverfly_Logo_Red.png">
+                <a href="https://www.finaldraft.com/"><img src="/images/FD_companyLogo_REVERSED.png"></a>
+                <a href="https://www.coverfly.com/"><img src="/images/Coverfly_Logo_Red.png"></a>
             </article>    
             <article class="showcase-dates">
                 <h4>WHEN</h4>
